Corrigindo ortografia de forms esqueci-senha

--- a/Materias/forms/Esqueci-senha.html
+++ b/Materias/forms/Esqueci-senha.html
@@ -11,7 +11,7 @@
     <section id="Esqueci-senha">
         <img src="/imagens/PNG/Logotipo.png" alt="Logo">
         <form>
-            <h3>Coloque se email escolar no campo abaixo</h3>
+            <h3>Coloque seu email escolar no campo abaixo</h3>
             <label>Email:</label>
             <input type="email" placeholder="email@falcaomv.com.br">
             <input onclick="enviar()" type="button" value="Enviar">
